[project]
name = "simsched"
version = "0.1.0"
description = "Simulated scheduling tool for investigating concurrency issues"
requires-python = ">=3.10"
license = { file = "COPYING" }
authors = [
    { name = "mmrmaximuzz", email = "mmrmaximuzz@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
]